# TestAuthApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
auth_app/article/: models.py  serializers.py  urls.py  views.py
auth_app/article/migrations/: 0001_initial.py  0002_auto_20251205_1830.py
auth_app/auth_app/: abstract_models.py  urls.py
auth_app/auth_app/settings/: __init__.py  _redis.py  _rest.py  _token.py  base.py  enums.py  utils.py
auth_app/authentication/: auth_manager.py  auth_token_manager.py  manager.py  redis_token_manager.py  serializers.py  token_authentication.py  tokens.py  urls.py  views.py
auth_app/authorization/: enums.py  models.py  permissions.py  serializers.py  urls.py  views.py
auth_app/authorization/migrations/: 0001_initial.py  0002_auto_20251202_1356.py  0003_auto_20251204_1128.py  0004_specificelement.py  0005_auto_20251204_1617.py
auth_app/posts/: models.py  serializers.py  urls.py  views.py
auth_app/posts/migrations/: 0001_initial.py  0002_auto_20251205_1803.py
auth_app/users/: model_managers.py  models.py  serializers.py  urls.py  utils.py  views.py
auth_app/users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_auto_20251205_1720.py
docs/: api.md  environments.md  permissions.md  test_data.md
